# slack-hitl-chat

./: Dockerfile  JIRA_Tickets__-_JIRA_tickets_template.csv  README.md  docker-compose.yml  environment.example  mcp.json  pyproject.toml
gif_mcp/: __init__.py  demo_slack_integration.py  example_usage.py  manifest.json  mcp_server.py  models.py  service.py  test_slack_formatting.py
google_mcp/: logging.conf  test_gdrive_server.py  test_stdio_server.py
google_mcp/gdrive_mcp/: __init__.py  drive_client.py  example_usage.py  manifest.json  mcp_server.py  models.py  service.py
google_mcp/google_admin/: __init__.py  api.py  mcp_server.py
google_mcp/google_admin/config/: __init__.py  google.py
google_mcp/google_admin/models/: __init__.py  models.py
google_mcp/google_admin/repositories/: google_client.py
google_mcp/google_admin/routers/api/v1/: __init__.py  users.py
google_mcp/google_admin/schema/: users.py
google_mcp/google_admin/services/: __init__.py  users.py
google_mcp/google_admin/tools/: users.py
google_mcp/google_admin/utils/: google.py
google_mcp/google_calendar/: manifest.json  mcp_server.py  models.py  service.py
jira_mcp/: __init__.py  core.py  models.py  server.py
src/: __init__.py  analytics.py  api.py  approval_handler.py  cli.py  completion_notifier.py  config_store.py  constants.py  dynamodb_utils.py  execute_handler.py  flask_ui.py  mcp_client.py  mcp_server.py  memory.py  orchestrator.py  policy.py  prompt_management.py  sdasdas.py  secrets.py  slack_blockkit.py  slack_helper.py  slack_lambda.py  slack_session_store.py  system_prompt.txt
src/templates/: analytics.html  approvals.html  index.html  policies.html  servers.html
terraform/: dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  stepfunctions.tf  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/stepfunctions/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_analytics.py  test_api.py  test_api_config.py  test_api_streaming.py  test_approval_handler.py  test_audit_api.py  test_bedrock_retries.py  test_chunk_text.py  test_cli.py  test_cli_migrate_config.py  test_completion_notifier.py  test_config_store.py  test_execute_handler.py  test_execute_handler_context.py  test_flask_ui.py  test_gdrive_copy.py  test_gdrive_mcp.py  test_gif_mcp.py  test_google_admin_list_scopes.py  test_google_admin_models.py  test_google_calendar_mcp.py  test_jira_mcp_create_project.py  test_jira_mcp_csv.py  test_jira_mcp_list_issues.py  test_jira_mcp_project_lookup.py  test_jira_mcp_projects.py  test_jira_mcp_roles.py  test_mcp_allowlist.py  test_mcp_client_multiserver.py  test_mcp_disabled_tools.py  test_mcp_server.py  test_mcp_servers_env_readme_example.py  test_orchestrator.py  test_orchestrator_allowlist.py  test_policy.py  test_policy_tools.py  test_secrets.py  test_slack_helper.py  test_slack_helper_blocks.py  (+4 more)
totp_mcp/: __init__.py  mcp_server.py
